--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="multiply">*</string>
     <string name="min">-</string>
     <string name="sum">+</string>
+    <string name="c">C</string>
 </resources>
